# topodex

./: .gitignore  Cargo.toml  README.md
configs/: extract_countries.json  extract_states.json  extract_vilages.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  lookup_endpoint.rs  lookup_service.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/extract/: Cargo.toml
crates/extract/src/: lib.rs  read_osm_data.rs
crates/extract_osm/: Cargo.toml
crates/extract_osm/src/: element_collection_reader.rs  lib.rs  read_osm_data.rs
crates/process/: Cargo.toml
crates/process/src/: fill_polygon.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs  rocksdb_helper.rs
load-test/: script.js
