[workspace]
members = ['crates/*']
resolver = "2"

[workspace.dependencies]
geohash = "0.13.1"
geo = "0.29.3"
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
anyhow = { version = "1.0.97", features = ["backtrace"] }
log = "0.4.27"
bitcode = { version = "0.6.5", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
geojson = { version = "0.24.2", features = ["geo-types"] }
serde = "1.0.219"
serde_json = "1.0.140"
rayon = "1.10.0"
env_logger = "0.11.8"
ntex = { version = "2.11.0", features = ["tokio"] }
