[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode = { version = "0.6.5", features = ["serde"] }
geo = { workspace = true }
geohash = { workspace = true }
anyhow = { workspace = true }
ntex = { version = "2.11.0", features = ["tokio"] }
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
rusty-leveldb = { version = "3.0.2", features = ["tokio"] }
serde = "1.0.218"
types = { version = "0.1.0", path = "../types" }
