[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode = { workspace = true }
geo = { workspace = true }
geohash = { workspace = true }
anyhow = { workspace = true }
ntex = { workspace = true }
rocksdb.workspace = true
rusty-leveldb = { version = "3.0.2", features = ["tokio"] }
serde = { workspace = true }
util = { version = "0.1.0", path = "../util" }
log.workspace = true
