[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
extract = { path = "../extract" }
geohash = { workspace = true }
geo = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }
geojson = { version = "0.24.2", features = ["geo-types"] }
ntex = { version = "2.11.0", features = ["tokio"] }
api = { path = "../api" }
types = { version = "0.1.0", path = "../types" }
process = { version = "0.1.0", path = "../process" }
serde_json = "1.0.140"
