[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
extract = { path = "../extract" }
geohash = { workspace = true }
geo = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
geojson = { workspace = true }
ntex = { workspace = true }
api = { path = "../api" }
util = { version = "0.1.0", path = "../util" }
process = { version = "0.1.0", path = "../process" }
serde_json = { workspace = true }
rayon = { workspace = true }
log.workspace = true
env_logger = { workspace = true }
