[package]
name = "extract"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { version = "0.1.0", path = "../util" }
osmpbf = "0.3.4"
rayon = { workspace = true }
geojson = { workspace = true }
geo = { workspace = true }
geohash.workspace = true
anyhow = { workspace = true }
serde_json = { workspace = true }
log.workspace = true
