[package]
name = "process"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode = { version = "0.6.5", features = ["serde"] }
geo.workspace = true
geohash.workspace = true
anyhow = { workspace = true }
geojson = { version = "0.24.2", features = ["geo-types"] }
rayon = "1.10.0"
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
types = { version = "0.1.0", path = "../types" }
