[package]
name = "process"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode = { workspace = true }
geo.workspace = true
geohash.workspace = true
anyhow = { workspace = true }
geojson = { workspace = true }
rayon = { workspace = true }
rocksdb.workspace = true
util = { version = "0.1.0", path = "../util" }
log.workspace = true
